# ArcPar

TP1/Squelette/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
TP1/Squelette/src/include/: CountIf.hpp
TP2/Squelette/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
TP2/Squelette/src/include/: merge_n.hpp  oddEvenSort.hpp  ompOddEvenSortV1.hpp  ompOddEvenSortV2.hpp
TP3/Squelette/: CMakeCache.txt  Makefile  cmake_install.cmake
TP3/Squelette/src/: testPipelinedBubbleSort.cpp
TP3/Squelette/src/include/: bubbleSort.hpp  pipelinedBubbleSort.hpp
TP4/Squelette/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
TP4/Squelette/src/: bench.c  matvec_r4.c  matvec_sse_r4.c
